worked on 'about me' and started on 'my work' sections

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="about-me">About Me </a>
+                        <a href="about-me" style="color: rgba(17, 37, 37)">About Me </a>
                     </li>
                     <li>
-                        <a href="work">My Work</a>
+                        <a href="work" style="color: rgba(17, 37, 37)"> My Work</a>
                     </li>
                     <li>
-                        <a href="contact">Contact Info</a>
+                        <a href="contact" style="color: rgba(17, 37, 37)">Contact Info</a>
                     </li>
                 </ul>
             </nav>
@@ -32,7 +32,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, repellat expedita accusamus earum voluptatum dolorem voluptatibus accusantium ratione eos maiores sit. At delectus sequi voluptatibus similique laboriosam ipsam, nihil dolore!
             </p>
         </section>
-        <section id="work" class="my-work">
+        <section id="work" class="work">
             <h2>My Work</h2>
                 <div>
                     <h3>Run Buddy</h3>
