--- a/index.html
+++ b/index.html
@@ -32,23 +32,47 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, repellat expedita accusamus earum voluptatum dolorem voluptatibus accusantium ratione eos maiores sit. At delectus sequi voluptatibus similique laboriosam ipsam, nihil dolore!
             </p>
         </section>
-        <section id="work" class="work">
+        <section id="work" class="work" >
             <h2>My Work</h2>
-                <div>
-                    <h3>Run Buddy</h3>
+            </div>
+            <div class="websites">
+                <article class="first-website">
+                    <img src="#" alt="" />
+                    <div class="website-name">
+                    <a href="#">Run Buddy</a>
+                    </div>
+            </article>
+            <article class="website">
+                <img src="#" alt="" />
+                <div class="website-name">
+                    <a href="#">Horiseon</a>
                 </div>
-                <div>
-                    <h3>Horiseon</h3>
+            </article>
+            <article class="website">
+                <img src="#" alt=""/>
+                <div class="website-name">
+                    <a href="">Placeholder1</a>
                 </div>
-                <div>
-                    <h3>Placeholder1</h3>
+            </article>
+            <article class="website">
+                <img src="#" alt=""/>
+                <div class="website-name">
+                    <a href="#">Placeholder2</a>
                 </div>
-                <div>
-                    <h3>Placeholder2</h3>
+            </article>
+            <article class="website">
+                <img src="#" alt=""/>
+                <div class="website-name">
+                    <a href="#">Placeholder3</a>
                 </div>
-                <div>
-                    <h3>Placeholder3</h3>
+            </article>
+            <article class="website">
+                <img src="#" alt=""/>
+                <div class="website-name">
+                    <a href="#">Placeholder4</a>
                 </div>
+            </article>
+            </div>
         </section>
         <footer id="contact" class="contact-me">
             <h4>Contact Info</h4>
