working on picture links

--- a/index.html
+++ b/index.html
@@ -37,37 +37,41 @@
             </div>
             <div class="websites">
                 <article class="first-website">
-                    <img src="#" alt="" />
                     <div class="website-name">
-                    <a href="#">Run Buddy</a>
+                    <a href=" https://sallaball.github.io/run-buddy/" title="picture" class="picture1"></a>
+                    <h3>Run Buddy
+                        <p>
+                            html, css
+                        </p>
+                    </h3>
                     </div>
             </article>
-            <article class="website">
-                <img src="#" alt="" />
+            <article class="website second-website">
                 <div class="website-name">
-                    <a href="#">Horiseon</a>
+                    <a href="https://sallaball.github.io/Horiseon-refactor/" title="picture2" class="picture2">Horiseon</a>
+                    <h3>Horiseon
+                        <p>
+                        html, css
+                        </p>
+                    </h3>
                 </div>
             </article>
-            <article class="website">
-                <img src="#" alt=""/>
+            <article class="website placeholder third-website">
                 <div class="website-name">
-                    <a href="">Placeholder1</a>
+                    <a href="#">Placeholder1</a>
                 </div>
             </article>
-            <article class="website">
-                <img src="#" alt=""/>
+            <article class="website placeholder fourth-website">
                 <div class="website-name">
                     <a href="#">Placeholder2</a>
                 </div>
             </article>
-            <article class="website">
-                <img src="#" alt=""/>
+            <article class="website placeholder fifth-website">
                 <div class="website-name">
                     <a href="#">Placeholder3</a>
                 </div>
             </article>
-            <article class="website">
-                <img src="#" alt=""/>
+            <article class="website placeholder sixth-website">
                 <div class="website-name">
                     <a href="#">Placeholder4</a>
                 </div>
