work on the placeholders

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </article>
             <article class="website second-website">
                 <div class="website-name">
-                    <a href="https://sallaball.github.io/Horiseon-refactor/" title="picture2" class="picture2">Horiseon</a>
+                    <a href="https://sallaball.github.io/Horiseon-refactor/" title="picture2" class="picture2"></a>
                     <h3>Horiseon
                         <p>
                         html, css
@@ -58,22 +58,26 @@
             </article>
             <article class="website placeholder third-website">
                 <div class="website-name">
-                    <a href="#">Placeholder1</a>
+                    <a href="#" title="picture3" class="picture3"></a>
+                    <h3>Placeholder1</h3>
                 </div>
             </article>
             <article class="website placeholder fourth-website">
                 <div class="website-name">
-                    <a href="#">Placeholder2</a>
+                    <a href="#" title="picture4" class="picture4"></a>
+                    <h3>Placeholder2</h3>
                 </div>
             </article>
             <article class="website placeholder fifth-website">
                 <div class="website-name">
-                    <a href="#">Placeholder3</a>
+                    <a href="#" title="picture5" class="picture5"></a>
+                    <h3>Placeholder3</h3>
                 </div>
             </article>
             <article class="website placeholder sixth-website">
                 <div class="website-name">
-                    <a href="#">Placeholder4</a>
+                    <a href="#" title="picture6" class="picture6"></a>
+                    <h3>Placeholder4                    </h3>
                 </div>
             </article>
             </div>
