fixed header links

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="about-me" style="color: rgba(17, 37, 37)">About Me </a>
+                        <a href="#about-me" style="color: rgba(17, 37, 37)">About Me </a>
                     </li>
                     <li>
-                        <a href="work" style="color: rgba(17, 37, 37)"> My Work</a>
+                        <a href="#work" style="color: rgba(17, 37, 37)"> My Work</a>
                     </li>
                     <li>
-                        <a href="contact" style="color: rgba(17, 37, 37)">Contact Info</a>
+                        <a href="#contact" style="color: rgba(17, 37, 37)">Contact Info</a>
                     </li>
                 </ul>
             </nav>
