added profile picture

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <body>
         <header>
             <h1>SALLA BALL</h1>
+            <div class="self">
+                <img src="./assets/images/self.jpg" alt="Salla Ball" width="90px" height="105px"/>
+            </div>
             <nav>
                 <ul>
                     <li>
