working on sizing for different machines

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
     <body>
         <header>
-            <h1>SALLA BALL</h1>
-            <div class="self">
-                <img src="./assets/images/self.jpg" alt="Salla Ball" width="90px" height="105px"/>
-            </div>
+            <h1>SALLA BALL
+                <div class="self">
+                    <img src="./assets/images/self.jpg" alt="Salla Ball" width="90px" height="105px"/>
+                </div>
+            </h1>
             <nav>
                 <ul>
                     <li>
@@ -37,7 +38,6 @@
         </section>
         <section id="work" class="work" >
             <h2>My Work</h2>
-            </div>
             <div class="websites">
                 <article class="first-website">
                     <div class="website-name">
