--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                     <li>
                         <a href="#contact" style="color: rgba(17, 37, 37)">Contact Info</a>
                     </li>
+                    <li>
+                        <a href="./assets/images/Salla Resume 2022.pdf" style="color: rgba(17, 37, 37)">Resume</a>
+                    </li>
                 </ul>
             </nav>
         </header>
