not quite done but getting there. Fixed some of the media bugs

--- a/index.html
+++ b/index.html
@@ -1,99 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Salla's Portfolio</title>
-        <link rel="stylesheet" href="./assets/css/style.css"/>
-    </head>
 
-    <body>
-        <header>
-            <h1>SALLA BALL
-                <div class="self">
-                    <img src="./assets/images/self.jpg" alt="Salla Ball" width="90px" height="105px"/>
-                </div>
-            </h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#about-me" style="color: rgba(17, 37, 37)">About Me </a>
-                    </li>
-                    <li>
-                        <a href="#work" style="color: rgba(17, 37, 37)"> My Work</a>
-                    </li>
-                    <li>
-                        <a href="#contact" style="color: rgba(17, 37, 37)">Contact Info</a>
-                    </li>
-                    <li>
-                        <a href="./assets/images/Salla Resume 2022.pdf" style="color: rgba(17, 37, 37)">Resume</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+<head>
+    <meta charset="UTF-8" />
+    <title>Salla's Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
-        <section class="jumbotron"></section>
+<body>
+    <header>
+        <h1>SALLA BALL
+            <div class="self">
+                <img src="./assets/images/self.jpg" alt="Salla Ball" width="90px" height="105px" />
+            </div>
+        </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-me" style="color: rgba(17, 37, 37)">About Me </a>
+                </li>
+                <li>
+                    <a href="#work" style="color: rgba(17, 37, 37)"> My Work</a>
+                </li>
+                <li>
+                    <a href="#contact" style="color: rgba(17, 37, 37)">Contact Info</a>
+                </li>
+                <li>
+                    <a href="./assets/images/Salla Resume 2022.pdf" style="color: rgba(17, 37, 37)">Resume</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-        <section id="about-me" class="about">
-            <h2>About me</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, repellat expedita accusamus earum voluptatum dolorem voluptatibus accusantium ratione eos maiores sit. At delectus sequi voluptatibus similique laboriosam ipsam, nihil dolore!
-            </p>
-        </section>
-        <section id="work" class="work" >
+
+
+    <section id="about-me" class="about">
+        <h2>About me</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, repellat expedita accusamus earum voluptatum
+            dolorem voluptatibus accusantium ratione eos maiores sit. At delectus sequi voluptatibus similique
+            laboriosam ipsam, nihil dolore!
+        </p>
+    </section>
+        <section id="work" class="work-box">
             <h2>My Work</h2>
             <div class="websites">
                 <article class="first-website">
                     <div class="website-name">
-                    <a href=" https://sallaball.github.io/run-buddy/" title="picture" class="picture1"></a>
-                    <h3>Run Buddy
-                        <p>
-                            html, css
-                        </p>
-                    </h3>
+                        <a href=" https://sallaball.github.io/run-buddy/" title="picture" class="picture1"></a>
+                        <h3>Run Buddy
+                            <p>
+                                html, css
+                            </p>
+                        </h3>
                     </div>
-            </article>
-            <article class="website second-website">
-                <div class="website-name">
-                    <a href="https://sallaball.github.io/Horiseon-refactor/" title="picture2" class="picture2"></a>
-                    <h3>Horiseon
-                        <p>
-                        html, css
-                        </p>
-                    </h3>
-                </div>
-            </article>
-            <article class="website placeholder third-website">
-                <div class="website-name">
-                    <a href="#" title="picture3" class="picture3"></a>
-                    <h3>Placeholder1</h3>
-                </div>
-            </article>
-            <article class="website placeholder fourth-website">
-                <div class="website-name">
-                    <a href="#" title="picture4" class="picture4"></a>
-                    <h3>Placeholder2</h3>
-                </div>
-            </article>
-            <article class="website placeholder fifth-website">
-                <div class="website-name">
-                    <a href="#" title="picture5" class="picture5"></a>
-                    <h3>Placeholder3</h3>
-                </div>
-            </article>
-            <article class="website placeholder sixth-website">
-                <div class="website-name">
-                    <a href="#" title="picture6" class="picture6"></a>
-                    <h3>Placeholder4                    </h3>
-                </div>
-            </article>
+                </article>
+                <article class="website">
+                    <div class="website-name">
+                        <a href="https://sallaball.github.io/Horiseon-refactor/" title="picture2" class="picture2"></a>
+                        <h3>Horiseon
+                            <p>
+                                html, css
+                            </p>
+                        </h3>
+                    </div>
+                </article>
+                <article class="website">
+                    <div class="website-name">
+                        <a href="#" title="picture3" class="pictures"></a>
+                        <h3>Placeholder1</h3>
+                    </div>
+                </article>
+                <article class="website">
+                    <div class="website-name">
+                        <a href="#" title="picture4" class="pictures"></a>
+                        <h3>Placeholder2</h3>
+                    </div>
+                </article>
+                <article class="website">
+                    <div class="website-name">
+                        <a href="#" title="picture5" class="pictures"></a>
+                        <h3>Placeholder3</h3>
+                    </div>
+                </article>
+                <article class="website">
+                    <div class="website-name">
+                        <a href="#" title="picture6" class="pictures"></a>
+                        <h3>Placeholder4 </h3>
+                    </div>
+                </article>
             </div>
         </section>
-        <footer id="contact" class="contact-me">
-            <h4>Contact Info</h4>
-                <div class="phone">P: 972-670-9380</div>
-                <div class="email"><a href="mailto:sallaball1206@gmail.com">sallaball1206@gmail.com</a></div>
-                <div class="linkedin" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="salla-ball-7ab057b3" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/salla-ball-7ab057b3?trk=profile-badge">LinkedIn Page</a></div>
-        </footer>
-                </body>
+    <footer id="contact" class="contact-me">
+        <h4>Contact Info</h4>
+        <div class="phone">P: 972-670-9380</div>
+        <div class="email"><a href="mailto:sallaball1206@gmail.com">sallaball1206@gmail.com</a></div>
+        <div class="linkedin" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL"
+            data-vanity="salla-ball-7ab057b3" data-version="v1"><a class="badge-base__link LI-simple-link"
+                href="https://www.linkedin.com/in/salla-ball-7ab057b3?trk=profile-badge">LinkedIn Page</a></div>
+    </footer>
+</body>
 
 </html>
