lets try the updates for about section again after actually saving the updates in html

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
     <section id="about-me" class="about">
         <h2>About me</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, repellat expedita accusamus earum voluptatum
-            dolorem voluptatibus accusantium ratione eos maiores sit. At delectus sequi voluptatibus similique
-            laboriosam ipsam, nihil dolore!
+            My name is Salla Ball and I am a student at SMU full stack development bootcamp. I come from a background of finance and tax collecting, along with some farm work and animal training. My finance experience is mostly in retirement products as a financial services consultant, and I am a fully lisenced broker. I am originally from Finland, and came to the United States when I was 19. 
         </p>
     </section>
         <section id="work" class="work-box">
