--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="websites">
                 <article class="first-website">
                     <div class="website-name">
-                        <a href=" https://sallaball.github.io/run-buddy/" title="picture" class="picture1"></a>
+                        <a href=" https://sallaball.github.io/run-buddy/" title="picture1" class="picture1"></a>
                         <h3>Run Buddy
                             <p>
                                 html, css
@@ -63,12 +63,14 @@
                             </p>
                         </h3>
                     </div>
+
                 </article>
                 <article class="website">
                     <div class="website-name">
-                        <a href="#" title="picture3" class="pictures"></a>
-                        <h3>Placeholder1</h3>
+                        <a href="https://thanks-for-giving.herokuapp.com/" title="picture3" class="picture3"></a>
+                        <h3>Thanks for Giving</h3>
                     </div>
+
                 </article>
                 <article class="website">
                     <div class="website-name">
